// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handling key events Navigating up and down the menu Going down keystroke 1`] = `
<div>
  <div
    class="filter-input-group"
  >
    <div
      class="filter-category"
    />
    <div
      class="filter-operator"
    />
    <div
      class="typeahead"
    >
      <input
        class=""
        data-testid="typeahead"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Handling key events Navigating up and down the menu Going up keystroke 1`] = `
<div>
  <div
    class="filter-input-group"
  >
    <div
      class="filter-category"
    />
    <div
      class="filter-operator"
    />
    <div
      class="typeahead"
    >
      <input
        class=""
        data-testid="typeahead"
        type="text"
        value=""
      />
      <div
        class="typeahead-selector"
      >
        <div
          class="header"
        >
          Field
        </div>
        <ul>
          <li
            class=""
          >
            <a
              class=""
            >
              foo
            </a>
          </li>
          <li
            class=""
          >
            <a
              class=""
            >
              bar
            </a>
          </li>
          <li
            class="hover"
          >
            <a
              class=""
            >
              baz
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Handling key events Navigating up and down the menu Going up/down keystroke with no options 1`] = `
<div>
  <div
    class="filter-input-group"
  >
    <div
      class="filter-category"
    />
    <div
      class="filter-operator"
    />
    <div
      class="typeahead"
    >
      <input
        class=""
        data-testid="typeahead"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Rendering states of typeahead Custom class render 1`] = `
<div
  className="filter-input-group"
>
  <div
    className="filter-category"
  />
  <div
    className="filter-operator"
  />
  <div
    className="typeahead"
  >
    <input
      className="foo"
      data-testid="typeahead"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Rendering states of typeahead Default render 1`] = `
<div
  className="filter-input-group"
>
  <div
    className="filter-category"
  />
  <div
    className="filter-operator"
  />
  <div
    className="typeahead"
  >
    <input
      className=""
      data-testid="typeahead"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Rendering states of typeahead Label render 1`] = `
<div
  className="filter-input-group"
>
  <div
    className="filter-category"
  >
    foo
  </div>
  <div
    className="filter-operator"
  />
  <div
    className="typeahead"
  >
    <input
      className=""
      data-testid="typeahead"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Rendering states of typeahead Operator label render 1`] = `
<div
  className="filter-input-group"
>
  <div
    className="filter-category"
  />
  <div
    className="filter-operator"
  >
    bar
  </div>
  <div
    className="typeahead"
  >
    <input
      className=""
      data-testid="typeahead"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Typeahead with a list of options Empty list of options 1`] = `
<div>
  <div
    class="filter-input-group"
  >
    <div
      class="filter-category"
    />
    <div
      class="filter-operator"
    />
    <div
      class="typeahead"
    >
      <input
        class=""
        data-testid="typeahead"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Updating the list of options as a user types Filtering a list of string options 1`] = `
<div>
  <div
    class="filter-input-group"
  >
    <div
      class="filter-category"
    />
    <div
      class="filter-operator"
    />
    <div
      class="typeahead"
    >
      <input
        class=""
        data-testid="typeahead"
        type="text"
        value="b"
      />
      <div
        class="typeahead-selector"
      >
        <div
          class="header"
        >
          Field
        </div>
        <ul>
          <li
            class=""
          >
            <a
              class=""
            >
              bar
            </a>
          </li>
          <li
            class=""
          >
            <a
              class=""
            >
              baz
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
